# caisend

./: .coverage  .cspell.json  .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CHANGELOG.md  CHAT_CAPTURE_COMPLETE_GUIDE.md  CONFIG_CENTRALIZATION_SUMMARY.md  CONFIG_MANAGER_指南.md  FULLSTACK_TEST_REPORT.md  IMPLEMENTATION_REPORT.md  MIGRATION_GUIDE.md  MVP1_DESIGN.md  OPERATIONS_SCRIPTS_SUMMARY.md  PLAN.md  PROJECT_ANALYSIS_REPORT.md  README-完整使用指南.md  README.md  README_TOOLS.md  REFACTORING_PLAN.md  ROADMAP.md  TECHNICAL_DEBT.md  TRANEASY_ARCHITECTURE_ANALYSIS.md  UPGRADE_PLAN.md  config-group-test.yaml  config-minimal.yaml  config-multi-account.yaml  config-ocr-test.yaml  config-test.yaml  config.example.yaml  config.json  enhanced-error-handler.js  fix-ssr-import.js  fixed-main-index.ts  implementation_plan.md.resolved  import_phrases.py  input_injector.py  jest.config.js  monitor-process.ps1  mypy.ini  (+52 more)
apps/core/: Cargo.toml
apps/core/src/: lib.rs
apps/core/src/action/: cdp_adapter.rs  input_simulator.rs  mod.rs  stealth.rs
apps/core/src/actors/: account.rs  messages.rs  mod.rs  supervisor.rs
apps/core/src/intelligence/: intent.rs  keywords.rs  mod.rs
apps/core/src/perception/: console_bridge.rs  definitions.rs  mod.rs  perception.js  signals.rs
apps/core/src/persistence/: checkpointer.rs  database.rs  mod.rs  scripts.rs  state.rs
apps/core/tests/: actor_test.rs  benchmarks.rs
apps/desktop/src-tauri/: .env  Cargo.toml  accounts.db  accounts.db-shm  accounts.db-wal  build_error.txt  check_error.md  check_error_3.md  check_error_4.md  check_error_5.md  check_error_6.md  icon.b64  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/benches/: message_processing.rs
apps/desktop/src-tauri/examples/: pbt_demo.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/js/: mutation_observer.js  mvp_observer.js
apps/desktop/src-tauri/migrations/: 20250101000000_create_accounts_table.sql  20250101000001_create_messages_table.sql  20250101000002_create_rules_table.sql  20250101000003_create_contacts_table.sql  20250101000004_create_analytics_table.sql  20250101000005_create_workflow_tables.sql  20251123123622_create_accounts_table.sql  20251123141743_create_messages_table.sql  20251123152038_create_rules_table.sql  20251124031608_create_mvp_tables.sql  20251124031608_create_mvp_tables.sql.bak  20251125152000_fix_rules_schema.sql  20251125162000_rules_schema_freeze.sql  20251126104500_create_pfsm_tables.sql  20251126121500_seed_reg_guide.sql.bak  20251126130000_create_vector_tables.sql.bak  20251126160000_extend_workflows.sql  20251127000000_create_script_tables.sql  20251127000001_seed_ghost_cockpit.sql  20251127170000_add_pbt_tables.sql  20251128000000_create_pbt_tables.sql  20251130000000_create_canary_metrics.sql  20251201000000_extend_accounts_for_phase2.sql  20251201000001_create_usage_log.sql  20251201000002_create_labels.sql
apps/desktop/src-tauri/models/: README.md
apps/desktop/src-tauri/pbt_samples/: TEST_SCRIPT.md  conversation_flow.json  daily_routine.json  intent_based_conversation.json  lifecycle_aware_flow.json  login_and_browse.json
apps/desktop/src-tauri/scripts/: perception_core.js  schema_sanity_check.ps1  telegram_peer_extractor.js
apps/desktop/src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/actors/: account.rs  mod.rs  supervisor.rs
apps/desktop/src-tauri/src/actuator/: mod.rs  scheduler.rs  service.rs
apps/desktop/src-tauri/src/adapters/: cdp.rs  connection_manager.rs  db.rs  mod.rs
apps/desktop/src-tauri/src/adapters/browser/: cdp_adapter.rs  mod.rs
apps/desktop/src-tauri/src/adapters/cdp/: mod.rs
apps/desktop/src-tauri/src/adapters/db/: behavior_tree_repo.rs  mod.rs  mvp_repo.rs  script_repository.rs  workflow_repo.rs
apps/desktop/src-tauri/src/adapters/translation/: mod.rs
apps/desktop/src-tauri/src/ai/: entity.rs  entity_extractor.rs  inference.rs  intent.rs  intent_classifier.rs  intent_templates.rs  mod.rs
apps/desktop/src-tauri/src/assets/: telegram_observer.js
apps/desktop/src-tauri/src/commands/: account.rs  analytics.rs  auth.rs  crm.rs  dashboard.rs  ghost_demo.rs  message.rs  messaging.rs  mod.rs  mvp_test.rs  pbt.rs  rule.rs  script.rs  session.rs  system.rs  telegram_login.rs  workflow.rs
apps/desktop/src-tauri/src/domain/: account.rs  analytics.rs  automation.rs  crm.rs  error_codes.rs  events.rs  lifecycle.rs  message.rs  messaging.rs  mod.rs  models.rs  ports.rs  rule.rs
apps/desktop/src-tauri/src/domain/automation/: orchestrator.rs
apps/desktop/src-tauri/src/domain/behavior_tree/: engine.rs  engine_tests.rs  mod.rs  schema.rs  state.rs  tests.rs
apps/desktop/src-tauri/src/domain/canary/: mod.rs  service.rs
apps/desktop/src-tauri/src/domain/dashboard/: mod.rs
apps/desktop/src-tauri/src/domain/decision/: behavior_tree.rs  bridge.rs  mod.rs  pbt_engine.rs
apps/desktop/src-tauri/src/domain/ports/: script_repository.rs
apps/desktop/src-tauri/src/domain/recommendation/: models.rs
apps/desktop/src-tauri/src/domain/workflow/: account_lifecycle.rs  engine.rs  engine_tests.rs  evaluator.rs  evaluator_tests.rs  instance.rs  integration_tests.rs  integration_tests.rs.bak  mod.rs  models.rs  scheduler.rs  schema.rs  script.rs  tests.rs  tracker.rs  validator.rs
apps/desktop/src-tauri/src/infrastructure/: checkpointer.rs  context_hub.rs  context_hub_tests.rs  dispatcher.rs  mod.rs  pbt_checkpointer.rs
apps/desktop/src-tauri/src/managers/: cdp_manager.rs  mod.rs  port_discoverer.rs  port_watcher.rs  script_manager.rs  session_manager.rs
apps/desktop/src-tauri/src/services/: message_processor.rs  mod.rs  rule_engine.rs  translator.rs  window_listener.rs
apps/desktop/src-tauri/tests/: chaos_engineering_tests.rs  console_bridge_fuzz.rs  dashboard_integration_test.rs  integration_checkpoint_tests.rs  messaging_tests.rs  network_stealth_test.rs  nlp_integration_test.rs  pbt_integration_test.rs  pbt_persistence_tests.rs  pfsm_pbt_integration_test.rs  rule_engine_tests.rs  sanity_check.rs  workflow_tests.rs
(+556 files in other folders)
