[package]
name = "teleflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actor Framework
ractor = "0.14"
ractor-supervisor = "0.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Persistence (Phase 2)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "json"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Action & Stealth (Phase 4)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
rand = "0.8"
rand_distr = "0.4"

# Intelligence (Phase 5)
aho-corasick = "1"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"

