[package]
name = "teleflow-desktop"
version = "0.0.0"
description = "Teleflow 2025 Desktop App"
authors = ["Teleflow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "macros"] }
thiserror = "1.0"
anyhow = "1.0"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
regex = "1.10"
aho-corasick = "1.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
futures = "0.3.31"
log = "0.4.28"
enigo = "0.2"

[lib]
name = "teleflow_desktop"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "message_processing"
harness = false

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z" # Optimize for size (or "3" for speed)
