[package]
name = "teleflow-desktop"
version = "0.0.0"
description = "Teleflow 2025 Desktop App"
authors = ["Teleflow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "macros"] }
thiserror = "1.0"
anyhow = "1.0"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
regex = "1.10"
aho-corasick = "1.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "cuda"] }
tokenizers = "0.22.1"
ndarray = "0.17.1"
petgraph = "0.8.3"
rand_distr = "0.5.1"
notify = "6.1"
rmp-serde = "1.1"
ractor = "0.15.9"

[lib]
name = "teleflow_desktop_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "message_processing"
harness = false

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
legacy-tests = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z" # Optimize for size (or "3" for speed)
