[package]
name = "teleflow-tauri"
version = "0.1.0"
edition = "2021"
description = "Teleflow 2025 - The Imperial Automation Engine"

[lib]
name = "teleflow_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Our Core Library
teleflow-core = { path = "../../core" }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
